# MyNet

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
core/framework/: BUILD  CMakeLists.txt  Tensor.cc  Tensor.hpp  common.cpp  common.hpp  readme.md  syncedmem.cpp  syncedmem.hpp  syncedmem_test.cpp
core/schema/: BUILD  MyNet.fbs
